test/SemanticAnalysis/LifetimeMethods/InvalidReturnTypeMove.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__move' has incorrect return type
	int __move() noexcept {
		return 0;
	}
}

// CHECK: 1 error generated.
